--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(List C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(List main.c list.c list.h)
+add_executable(List main.c list_cycle.c list_cycle.h list.c list.h)
